@@ -15,3 +15,4 @@ Código:
 	14/10/2022: imageDepthLayers agregado
 	15/10/2022: imageDecompress agregado
 	16/10/2022: imageToString mejorado
+	17/10/2022: Archivo de pruebas iniciado y cambios en los nombres de los archivos al formato correcto
